changed code link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
             <div class="nav">
               <h2 id="title">
                 <a href="/about.html" title="about">brian martin</a>
-                writes <a href="/code.html" title="code">code</a>.
+                writes <a href="/gitweb" title="code">code</a>.
               </h2>
             </div>
             <div class="blog">
