changed link to resume.pdf

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="nav">
               <h2 id="title">
-                <a href="/about.html" title="about">brian martin</a>
+                <a href="/resume.pdf" title="about">brian martin</a>
                 writes <a href="/gitweb" title="code">code</a>.
               </h2>
             </div>
